fix(styles): Fix overflow when using touch input or trackpads
Manual overflow styling is required from this point onward

--- a/app/src/app.css
+++ b/app/src/app.css
@@ -7,6 +7,12 @@ body {
   font-family: "Funnel Sans Variable", sans-serif;
 }
 
+html,
+body {
+  overflow: hidden;
+  overscroll-behavior: none;
+}
+
 * {
   /* Prevent text selection */
   user-select: none;
